# code

./: .gitignore  .gitmodules  README.md
algorithm/Codility/: Abs-distinct.java  Alternating.cpp  Binary-gap.cpp  Dominator.java  Equi.cpp  Max-profit.cpp  MaxGap.cpp  Prefix-set.java  Stone-wall.cpp  knights.cpp  knights.out
algorithm/Leetcode/: README.md
area/general/: consistent_hashing.py  dns1035_label.go  quantity.go  unicode.py
area/genomics/: sample.fastq
area/network/: skydns
language/c/: a.out  argc.c  array_addr.c  dirent.c  double_free.c  endianness.c  file_des.c  float_equal.c  float_fixed.c  fork_signal.c  func_pointer.c  limits.c  malloc_addr.c  mystery.c  sizeof.c  socket_client.c  socket_server.c  threadstack.c  va.c
language/c++/: GPATH  GRTAGS  GTAGS  a.out  cdecl.cc  operator.cc  point.cc  sharedptr.cc  template.cc  test1.cc  test2.cc
language/elisp/: arguments.el  bool.el  buffer-functions.el  buffers.el  defcustom.el  functions.el  fundamental-functions.el  if.el  keybinding.el  let.el  list.el  loop.el  misc-functions.el  quotes.el  recursion.el  save-excursion.el  symbols.el  variables.el
language/expect/: no_eof.sh  sleep_touch.sh
language/go/: README.md  build.sh
language/html/: index.html
language/java/: AbstractClass.java  AccountWithSync.java  AccountWithoutSync.java  Exceptional.java  ExtendsAbstract.java  FileStreamReader.java  InnerClass.java  MultiThreading.java  MyMachineName.java  MySetThread.java  Overload.java  PrintDir.java  Test1.java  ThreadClass.java  makefile  nslookup.java
language/javascript/: arrays.js  closure.js  map.js  string.js
language/lua/: interpreter  interpreter.c  metatable_oop.lua  module.lua  scope.lua
language/php/: namespace1.php  namespace2.php
language/python/: assert.py  builtin.py  class.py  closure.py  coroutines.py  ctx_manager.py  decorator.py  descriptor.py  function.py  functool.py  getset_attr_item.py  inheritance.py  mod_warnings.py  object.py  pkg_collections.py  pkg_functool.py  pkg_importlib.py  pkg_itertools.py  pkg_mock.py  pkg_os.py  pkg_regex.py  pkg_warnings.py  process.py  set.py  string.py
language/ruby/: array.rb  block.rb  class.rb  function.rb  hash.rb  hello.rb  if.rb  loops.rb  method.rb  proc.rb  string.rb  symbol.rb  while.rb
language/rust/: functions.rs  hello.rs  primitives.rs  variable_binding.rs
language/shell/: File  arithmetic.sh  array.sh  bool.sh  builtin.sh  case.sh  colon_vars.sh  command.sh  echo.sh  error.sh  example.sh  function.sh  git.sh  here_doc.sh  if.sh  loop.sh  param_expansion.sh  process.sh  pushd.sh  read.sh  redirection.sh  regex.sh  set.sh  shift.sh  special_vars.sh  ssh.sh  string.sh  subprocess.sh  subprocess_2.sh  test.sh  trap.sh  trap_simple.sh  variables.sh  wait.sh
source/go-workspace/: README.md
tool/: README.md
tool/appengine/: README.md
tool/bottle/: bottle.py  example.py
tool/cassandra/: README.md
tool/cloudfoundry/: README.md
tool/cmake/: README.md
tool/cmake/hello/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tool/cmake/multi-directory/: CMakeLists.txt
tool/cmake/shared-lib/: CMakeLists.txt
tool/cmake/shared-lib/include/: student.h
tool/cmake/shared-lib/src/: student.cpp
tool/cmake/use-lib/: CMakeLists.txt  libtest.cpp
tool/cni/: 10-mynet.conf
tool/nlp/: NLP.py
workspace/: README.md
(+1380 files in other folders)
